[project]
name = "symbol-export"
version = "1.0.0"
description = "Python package module encapsulation toolkit - Enforce public/private symbols at import time"
readme = "README.md"
authors = [
    { name = "AlanBogarin", email = "bogarin01alan@email.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.0",
    "Programming Language :: Python :: 3.1",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed"
]
requires-python = ">=3.0"
dependencies = []

[project.urls]
Homepage = "https://github.com/AlanBogarin/python-encapsulation"
Documentation = "https://github.com/AlanBogarin/python-encapsulation/wiki"
Repository = "https://github.com/AlanBogarin/python-encapsulation"
Issues = "https://github.com/AlanBogarin/python-encapsulation/issues"
Changelog = "https://github.com/AlanBogarin/python-encapsulation/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["__symbol_export__"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = [".pyi", "py.typed"]

[tool.pytest]
testpaths = ["tests"]
